# p2p_assignment

./: .gitignore  .replit  LICENSE  README.md  main.sh  node.py  package.json  primes.py  pyproject.toml  replit_setup.sh  requirements.txt  respond_to_message.py  reverse_proxy.py  server.py
backendy_stuff/: reverse_proxy.py  utils.py
frontend/: 404.html  css.css  index.html  package.json  springy_layout.js  updater.js  webpack.config.js
frontend/src/: index.js
static/: index.html
static/src/: index.js
