[tool.poetry]
name = "p2p"
version = "0.1.0"
description = "A toy P2P application"
authors = ["Haseeb Qureshi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
sympy = "^1.5.1"
waitress = "^1.4.3"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
